--- a/Invoices/SAPUI5/webapp/view/App.view.xml
+++ b/Invoices/SAPUI5/webapp/view/App.view.xml
@@ -1,6 +1,26 @@
-<mvc:View 
-        controllerName="logaligroup.SAPUI5.controller.App"
-        xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" >
-    <Button id="_IDGenButton1" text="{i18n>showHelloButtonText}" press=".onShowHellow"></Button>
-    <Input id="_IDGenInput1" type="Text" value="{/recipient/name}" description="Hello {/recipient/name}" width="60%" valueLiveUpdate="true"></Input>
+<mvc:View controllerName="logaligroup.SAPUI5.controller.App"
+    xmlns="sap.m"
+    xmlns:mvc="sap.ui.core.mvc" displayBlock="true">
+    <Shell >
+        <App>
+            <Page title="{i18n>appTitle}">
+                <content>
+                    <Panel headerText="{i18n>helloPanel}" class="sapUiResponsiveMargin" width="auto">
+                        <content>
+                            <Button id="_IDGenButton1" 
+                                    text="{i18n>showHelloButtonText}" 
+                                    press=".onShowHellow" 
+                                    class="sapUiSmallMarginEnd"/>
+                            <Input id="_IDGenInput1" 
+                                    type="Text" 
+                                    value="{/recipient/name}" 
+                                    width="60%" 
+                                    valueLiveUpdate="true"/>
+                            <Text text="Hello {/recipient/name}" class="sapUiSmallMargin"/>
+                        </content>
+                    </Panel>
+                </content>
+            </Page>
+        </App>
+    </Shell>
 </mvc:View>
