Creacion de estilos

--- a/Invoices/SAPUI5/webapp/view/App.view.xml
+++ b/Invoices/SAPUI5/webapp/view/App.view.xml
@@ -16,7 +16,7 @@
                                     value="{/recipient/name}" 
                                     width="60%" 
                                     valueLiveUpdate="true"/>
-                            <Text text="Hello {/recipient/name}" class="sapUiSmallMargin"/>
+                            <Text text="Hello {/recipient/name}" class="sapUiSmallMargin boldElements"/>
                         </content>
                     </Panel>
                 </content>
